--- a/src/contact.html
+++ b/src/contact.html
@@ -17,183 +17,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<style>
-body {
-	font-family: 'Open Sans', sans-serif;
-}
-.form-control {
-	box-shadow: none;
-	border-radius: 4px;        
-	border-color: #dfe3e8;
-}
-.navbar {
-	background: #fff;
-	padding-left: 16px;
-	padding-right: 16px;
-	border-bottom: 1px solid #dfe3e8;
-	border-radius: 0;
-}
-.navbar .navbar-brand {
-	font-size: 20px;
-	padding-left: 0;
-	padding-right: 50px;
-}
-.navbar .navbar-brand b {
-	color: #B2AC88;		
-}
-.navbar a, .navbar a:active {
-	color: white;
-	background: transparent;
-}
-.navbar .navbar-nav a:hover, .navbar .navbar-nav a:focus {
-	color: grey !important;
-}
-.navbar .navbar-nav > a.active, .navbar .navbar-nav.show > a {
-	color: #B2AC88 !important;
-	background: transparent !important;
-}
-.navbar .form-inline .input-group-text {
-	box-shadow: none;
-	border-radius: 2px 0 0 2px;
-	background: white;
-	border-color: white;
-	font-size: 16px;
-}
-.navbar .form-inline i {
-	font-size: 16px;
-}
-.navbar .form-inline .btn {
-	border-radius: 2px;
-	color: #fff;
-	border-color: #B2AC88;
-	background: #B2AC88;
-	outline: none;
-}
-.navbar .form-inline .btn:hover, .navbar .form-inline .btn:focus {
-	border-color: #B2AC88;
-	background: #B2AC88;
-}
-.navbar .search-form {
-	display: inline-block;
-}
-.navbar .search-form .btn {
-	margin-left: 4px;
-}
-.navbar .search-form .form-control {
-	border-radius: 2px;
-}
-.navbar .login-form .input-group {
-	margin-right: 4px;
-	float: left;
-}
-.navbar .login-form .form-control {
-	max-width: 158px;
-	border-radius: 0 2px 2px 0;
-}    	
-.navbar .navbar-right .dropdown-toggle::after {
-	display: none;
-}
-.navbar .dropdown-menu {
-	font-size: 14px;
-	border-radius: 1px;
-	border-color: #e5e5e5;
-	box-shadow: 0 2px 8px rgba(0,0,0,.05);
-}
-.navbar .dropdown-menu a {
-	padding: 6px 20px;
-}
-.navbar .login-dropdown .dropdown-menu {
-	width: 505px;
-	padding: 20px;
-	left: auto;
-	right: 0;        
-}
-.navbar .login-dropdown .dropdown-toggle::after {
-	display: none;
-}
-.addingspace {
-  clear:left;
-  height:25px;
-  margin: 20px;
- }
- .addingspace2 {
-  margin-left: 150px;
- }
-@media (min-width: 1200px){
-	.search-form .input-group {
-		width: 400px;
-		margin-left: 30px;
-	}
-}
-@media (max-width: 768px){
-	.navbar .dropdown-menu {
-		width: 100%;
-		background: transparent;
-		padding: 10px 20px;
-	}
-	.navbar .input-group {
-		width: 100%;
-		margin-bottom: 15px;
-	}
-	.navbar .input-group .form-control {
-		max-width: none;			
-	}
-	.navbar .login-form .btn {
-		width: 100%;
-	}
-}
-
-</style>
-</head> 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="index.html" class="navbar-brand">Food<b>Flip</b></a>  		
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Collection of nav links, forms, and other content for toggling -->
-    </nav>
-
-<div class="form-wrapper">
-    <style>
-        .form-wrapper {
-  padding: 10px;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.red{
-  color: red;
-}
-
-.form-col {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  max-width: 1120;
-  padding-left: 10px;
-}
-
-.form__item {
-  display: flex;
-  flex-direction: column;
-  padding-top: 15px;
-}
-
-label {
-  font-size: 14px;
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-.time__input {
-  max-width: 100px;
-  margin-right: 25px;
-}
-
-    </style>
 
 <div class="main-content">
     <div class="container">
@@ -201,79 +24,11 @@ label {
 <section class="mb-4">
 
     <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+    <h2 class="h1-responsive font-weight-bold text-center my-4">About Us</h2>
     <!--Section description-->
     <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
         a matter of hours to help you.</p>
 
-    <div class="row">
-
-        <!--Grid column-->
-        <div class="center">
-            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
-
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="name" name="name" class="form-control">
-                            <label for="name" class="">Your name</label>
-                        </div>
-                    </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="email" name="email" class="form-control">
-                            <label for="email" class="">Your email</label>
-                        </div>
-                    </div>
-                    <!--Grid column-->
-
-                </div>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <input type="text" id="subject" name="subject" class="form-control">
-                            <label for="subject" class="">Subject</label>
-                        </div>
-                    </div>
-                </div>
-                <!--Grid row-->
-
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-12">
-
-                        <div class="md-form">
-                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                            <label for="message">Your message</label>
-                        </div>
-
-                    </div>
-                </div>
-                <!--Grid row-->
-
-            </form>
-
-            <div class="text-center text-md-left">
-                <a class="btn btn-primary">Send</a>
-            </div>
-            <div class="status"></div>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-
-    </div>
 
 </section>
 </div>
